2015-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c (ReadPICTImage): 10171 "Resource leak".  2nd try.

	* coders/wmf.c (util_set_brush): Silence Coverity 44739
	"Out-of-bounds access".  2nd try.

2015-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (SetLogEventMask): Silence Coverity 10069 "Value
	not atomically updated".  Logging initialization is done
	single-threaded entirely in InitializeLogInfo() now.

2015-03-28  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Attempt to quiet Coverity
	44734 "Data race condition" by freeing mng_info->png_pixels
	and mng_info->quantum_scanline separately from MngInfoFreeStruct.

2015-03-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/widget.c (XEditText): Silence Coverity 10072 "Overlapping
	buffer in memory copy"

	* coders/locale.c (ReadConfigureFile): Silence Coverity 10075
	"Overlapping buffer in memory copy".

	* magick/xwindow.c (MagickXMakeWindow): Silence Coverity 10076
	"Overlapping buffer in memory copy".

	* coders/dcm.c (funcDCM_TransferSyntax): Silence Coverity 10083
	"Unchecked return value".

	* magick/static.c (ExecuteStaticModuleProcess): Silence Coverity
	10082 "Unchecked return value".

	* coders/cals.c (ReadCALSImage): Silence Coverity 10086 "Unchecked
	return value from library".
	(ReadCALSImage): Silence Coverity 10085 "Unchecked return value".
	(ReadCALSImage): Silence Coverity 10084 "Unchecked return value
	from library".

	* magick/enhance.c (ModulateImage): Silence Coverity 10087
	"Unchecked return value".

2014-03-24  Jaroslav Fojtik  <JaFojtik@seznam.cz>

        * coders/wpg.c More paranoa in checking ReadBlobByte() negative return.

2015-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (Generate8BIMAttribute): Silence Coverity
	10195 "Argument cannot be negative".

	* Magick++/lib/Image.cpp (syncPixels): Silence Coverity 44722
	"Unchecked return value".